<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:id="@+id/registrationLay">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/registration_text"
            android:id="@+id/registrationUserMsgText"
            android:padding="10dp" />

        <RadioGroup
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:showDividers="middle"
            android:id="@+id/registrationUserTypeLay"
            android:measureWithLargestChild="false"
            android:longClickable="true"
            android:padding="10dp">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registration_usertype_student"
                android:id="@+id/registrationStudentRadio"
                android:checked="true"
                android:onClick="onUserTypeClicked" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registration_usertype_admin"
                android:id="@+id/registrationAdminRadio"
                android:checked="false"
                android:layout_gravity="right"
                android:onClick="onUserTypeClicked" />
        </RadioGroup>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/registrationFirstNameEdit"
                android:padding="10dp"
                android:hint="@string/registration_first_name"
                android:singleLine="true" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/registrationLastNameEdit"
                android:padding="10dp"
                android:hint="@string/registration_last_name"
                android:singleLine="true" />
        </LinearLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/registrationUsernameEdit"
            android:layout_gravity="center_horizontal"
            android:hint="@string/registration_username"
            android:singleLine="true"
            android:padding="10dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/registrationPwdEdit"
            android:layout_gravity="center_horizontal"
            android:hint="@string/registration_password"
            android:singleLine="true"
            android:padding="10dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/registrationEmailEdit"
            android:hint="@string/registration_email"
            android:singleLine="true"
            android:padding="10dp" />

            <EditText
                android:layout_width="339dp"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/registrationMajorEdit"
                android:hint="@string/registration_major"
                android:singleLine="true"
                android:padding="10dp"
                android:layout_weight="2.13" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/registrationInterestsEdit"
            android:hint="@string/registration_interests"
            android:singleLine="true"
            android:padding="10dp"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registration_create_button"
                android:id="@+id/registrationCreateButton"
                android:padding="15dp"
                android:onClick="onCreateClicked"
                android:nestedScrollingEnabled="false"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="20dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registration_cancel_button"
                android:id="@+id/registrationCancelButton"
                android:padding="15dp"
                android:layout_gravity="right"
                android:layout_margin="0dp"
                android:nestedScrollingEnabled="true"
                android:onClick="onCancelClicked"
                android:layout_marginLeft="20dp" />


        </LinearLayout>


    </LinearLayout>

</ScrollView>
