<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/movie_search_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:hint="@string/movie_search_title_hint"
            android:layout_weight="4"/>

        <EditText
            android:id="@+id/movie_search_year"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:inputType="number"
            android:ems="10"
            android:hint="@string/movie_search_year_hint"
            android:layout_weight="1"/>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_search"
        android:onClick="searchMovie" />

</LinearLayout>
